--- a/test/reg-test/fam-api-reg/CMakeLists.txt
+++ b/test/reg-test/fam-api-reg/CMakeLists.txt
@@ -123,3 +123,4 @@ add_fam_test(fam_region_registration_basic)
 add_fam_test(fam_region_registration_mt)
 add_fam_test(fam_close_simple)
 add_fam_test(fam_close_mt)
+add_fam_test(fam_buffer_reg_test)
