--- a/src/fam-api/CMakeLists.txt
+++ b/src/fam-api/CMakeLists.txt
@@ -24,6 +24,7 @@ set(LIBOPENFAM_SRC
   ${LIBOPENFAM_SRC}
   ${CMAKE_CURRENT_SOURCE_DIR}/fam.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_descriptor.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_buffer.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_ops_libfabric.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_ops_shm.cpp
   PARENT_SCOPE
@@ -32,6 +33,7 @@ set(LIBOPENFAM_SRC
 set(CIS_SERVER_SRC
   ${CIS_SERVER_SRC}
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_descriptor.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_buffer.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_ops_libfabric.cpp
   PARENT_SCOPE
   )
@@ -39,6 +41,7 @@ set(CIS_SERVER_SRC
 set(MEMORY_SERVER_SRC
   ${MEMORY_SERVER_SRC}
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_descriptor.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_buffer.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_ops_libfabric.cpp
   PARENT_SCOPE
   )
